Fixes:
-Rounded corners on the images

-Provider Search - Search Bridge and then click next - Sort A-Z and put 0-9 at bottom - Not order by title

-Too much padding around inside hero links on mobile / Provider Page

-Back button is in english on the welsh

-Default link colour

AND accordion item block now supports any content.

--- a/web/app/themes/estyn/resources/styles/app.scss
+++ b/web/app/themes/estyn/resources/styles/app.scss
@@ -116,6 +116,14 @@ $m-5: $p-5;
 
 $paragraph-margin-bottom: 1.6rem;
 
+a, a:visited, a:active {
+    color: $estyn-darkblue;
+
+    &.btn-primary {
+        color: white;
+    }
+}
+
 .colour-black {
     color: black;
 }
@@ -192,6 +200,10 @@ body {
 }
 .bg-blue {
     background-color: $estyn-blue;
+
+    a, a:visited, a:active {
+        color: white;
+    }
 
     .accordion-item {
         background: transparent;
@@ -1586,7 +1598,7 @@ p.sp-desc {
             }
         }*/
 
-        border-radius: $border-radius-sm;
+        border-radius: $border-radius-sm + 0.20;
 
 /*         &.breakOut {
             max-width: 100%;
